# recipe-http

./: CMakeLists.txt  README.md
src/: main.cpp
src/lib/: app_utils.cpp  file_utils.cpp  ipc_shared_file.cpp  ipc_shared_memory.cpp
src/lib/inc/: app_utils.h  file_utils.h  ipc_shared_file.h  ipc_shared_memory.h
